# yayw

./: .env.template  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  create_release.yml  publish.yml
tests/: test_splitter.py  test_yayw.py
tests/data/: long_en.txt  long_zh.txt  short_en.txt  short_zh.txt
yayw/: __init__.py  __main__.py  splitter.py  yayw.py
