[tool.poetry]
name = "yayw"
version = "0.0.0"
description = "Yap all you want to Threads"
authors = ["Tsung-Ju Lii <usefulalgorithm@gmail.com>"]
license = "GPL-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
loguru = "^0.7.3"
langdetect = "^1.0.9"
poetry = "^2.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.coverage.run]
branch = true
relative_files = true
omit = ["**/__main__.py", "**/__init__.py", "tests/*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
--doctest-modules \
--cov=./ \
--cov-append \
--cov-report html:reports/coverage-html \
--cov-report xml:reports/coverage.xml \
--ignore=docs/
"""
testpaths = ["tests"]
